--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@hookform/resolvers": "^4.1.3",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -27,8 +29,10 @@
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
