--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
+.env
 .env*.local
 
 # vercel
@@ -41,5 +42,6 @@ yarn-error.log*
 next-env.d.ts
 
 # Prisma
+prisma/dev.db
 /prisma/dev.db
 /prisma/dev.db-journal
